# kaiko-sdk-examples

./: LICENSE.md  README.md  package-lock.json
.github/: dependabot.yml
.github/workflows/: client-cpp.yml  client-csharp.yml  client-go.yml  client-java.yml  client-node.yml  client-python.yml  client-rust.yml  client-scala.yml
cpp/: .gitignore  Dockerfile  Dockerfile.conan  README.md  app.cpp  build_conan.sh  build_docker.sh  conan_profile.conf  conanfile.txt  docker-compose.yml
cpp/cmake/: CMakeLists.txt
cpp/conan/: CMakeLists.txt
csharp/: NuGet.Config  Program.cs  Project.csproj  README.md  Resubscribe.cs
examples/cpp/: .gitignore  CMakeLists.txt  Dockerfile  README.md  app.cpp  async_api.cpp  build.sh  build_cmake.sh  build_conan.sh  build_docker.sh  conanfile.txt  docker-compose.yml  resubscribe.cpp
examples/cpp/cmake/: CMakeLists.txt
examples/cpp/conan/: CMakeLists.txt
examples/csharp/: Program.cs  Project.csproj  README.md  Resubscribe.cs
examples/go/: README.md  go.mod  go.sum  main.go
examples/go/endpoints/: main.go
examples/go/resubscribe/: main.go
examples/java/: README.md  build.gradle  gradle.properties
examples/java/src/main/java/endpoints/: Main.java
examples/java/src/main/java/example/: Main.java
examples/java/src/main/java/reconnect/: Main.java
examples/java/src/main/java/resubscribe/: Main.java
examples/java/src/test/java/test/: GrpcTest.java
examples/node/: README.md  endpoints.ts  index.ts  package-lock.json  package.json  reconnect.ts  tsconfig.json
examples/python/: Pipfile  README.md  endpoints.py  example.py  main.py  reconnect.py  requirements.txt
examples/scala/: README.md  build.sbt
examples/scala/project/: Dependencies.scala
examples/scala/src/main/scala/endpoints/: Main.scala
examples/scala/src/main/scala/example/: Main.scala
examples/scala/src/main/scala/reconnect/: Main.scala
examples/scala/src/test/scala/: GrpcSpec.scala
go/: README.md  go.mod  go.sum
go/endpoints/: main.go
go/resubscribe/: main.go
java/: README.md  build.gradle  settings.gradle
java/src/main/java/endpoints/: Main.java
java/src/main/java/iterator/: Main.java
java/src/main/java/observer/: Main.java
java/src/main/java/resubscribe/: Main.java
java/src/main/resources/: logback.xml
java/src/test/java/test/: GrpcTest.java
node/: README.md  endpoints.ts  package-lock.json  package.json  tsconfig.json
python/: .gitignore  Pipfile  README.md  endpoints.py  pyproject.toml  requirements.txt
python/code-example/: aggregated_quote_request.py  aggregated_state_price_v1_request.py  aggregated_state_price_v1_request_replay.py  aggregates_direct_exchange_rate_request.py  aggregates_spot_exchange_rate_request.py  composite_indices_v1_request.py  composite_indices_v1_request_replay.py  constant_duration_indices_v1_request.py  constant_duration_indices_v1_request_replay.py  derivatives_instrument_metrics_request.py  exotic_indices_v1_request.py  exotic_indices_v1_request_replay.py  index_forex_rate.py  index_multi_asset.py  index_multi_asset_replay.py  index_rate_request.py  index_rate_request_replay.py  iv_svi_parameters_v1_request.py  market_update_request.py  market_update_request_full_order_book.py  market_update_request_replay_full_order_book.py  market_update_request_replay_top_of_book.py  market_update_request_replay_trade.py  market_update_request_replay_unknown.py  market_update_request_top_of_book.py  market_update_request_unknown.py  ohlcv_request.py  ohlcv_request_replay.py  orderbookl2_v1_replay_request.py  orderbookl2_v1_request.py  staking_rates_v1_request.py  trades_request.py  trades_request_replay.py  vwap_request.py  vwap_request_replay.py
python/code-example-generator-script/: generate_code_ci.py  generate_examples.py  python_generator.py  python_replay_generator.py  utils.py
rust/: Cargo.toml  README.md
rust/src/: composite_indices.rs  constant_duration_indices.rs  derivatives_instrument_metrics.rs  endpoints.rs  exchange_rate.rs  exotic_indices.rs  indices.rs  iv_svi_parameters.rs  lib.rs  market_update.rs  orderbookl2.rs  orderbookl2_replay.rs  resubscribe.rs  staking_rates.rs  vwap.rs
scala/: .gitignore  .scalafmt.conf  README.md  build.sbt
scala/project/: Dependencies.scala  plugins.sbt
scala/src/main/scala/endpoints/: Main.scala
scala/src/main/scala/resubscribe/: Main.scala
scala/src/test/scala/: GrpcSpec.scala
