[package]
name = "example"
version = "0.1.0"
edition = "2021"

default-run = "endpoints"

[[bin]]
name = "endpoints"
path = "src/endpoints.rs"

[[bin]]
name = "indices"
path = "src/indices.rs"

[[bin]]
name = "market_update"
path = "src/market_update.rs"

[[bin]]
name = "resubscribe"
path = "src/resubscribe.rs"

[[bin]]
name = "vwap"
path = "src/vwap.rs"

[dependencies]
kaikosdk = { git = "https://github.com/kaikodata/kaiko-rust-sdk.git", tag = "1.16.1" }
tonic = { version = "0.10", default-features = false, features = [
    "tls-roots",
    "tls",
] }
tokio = { version = "1.0", default-features = false, features = [
    "macros",
    "rt-multi-thread",
] }
tokio-stream = { version = "0.1", default-features = false }
