[package]
name = "example"
version = "0.1.0"
edition = "2021"

default-run = "endpoints"

[[bin]]
name = "endpoints"
path = "src/endpoints.rs"

[[bin]]
name = "indices"
path = "src/indices.rs"

[[bin]]
name = "market_update"
path = "src/market_update.rs"

[[bin]]
name = "resubscribe"
path = "src/resubscribe.rs"

[[bin]]
name = "vwap"
path = "src/vwap.rs"

[[bin]]
name = "exchange_rate"
path = "src/exchange_rate.rs"

[[bin]]
name = "derivatives_instrument_metrics"
path = "src/derivatives_instrument_metrics.rs"

[[bin]]
name = "iv_svi_parameters"
path = "src/iv_svi_parameters.rs"

[[bin]]
name = "exotic_indices"
path = "src/exotic_indices.rs"

[dependencies]
kaikosdk = { git = "https://github.com/kaikodata/kaiko-rust-sdk.git", tag = "1.23.3" }
tonic = { version = "0.12.2", default-features = false, features = [
    "tls-roots",
    "tls",
] }
tokio = { version = "1.40.0", default-features = false, features = [
    "macros",
    "rt-multi-thread",
] }
tokio-stream = { version = "0.1.15", default-features = false }
pbjson-types = { version = "0.7.0", default-features = false }
